@@ -31,12 +31,10 @@ import java.io.IOException;
 import java.io.PrintWriter;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import it.tidalwave.util.test.FileComparisonUtils;
-import it.tidalwave.accounting.model.HourlyReport;
 import it.tidalwave.accounting.model.spi.ProjectSpi;
 import it.tidalwave.accounting.test.util.ScenarioFactory;
 import org.testng.annotations.Test;
+import static it.tidalwave.util.test.FileComparisonUtils.assertSameContents;
 
 /***********************************************************************************************************************
  *
@@ -49,21 +47,21 @@ public class DefaultHourlyReportGeneratorTest
     public void must_properly_generate_report (@Nonnull final String scenarioName, @Nonnull final ProjectSpi project)
       throws IOException
       {
-        final Path expectedResultsFolder = Paths.get("src/test/resources/expected-results");
-        final Path testFolder = Paths.get("target/test-results");
+        final var expectedResultsFolder = Path.of("src/test/resources/expected-results");
+        final var testFolder = Path.of("target/test-results");
         Files.createDirectories(testFolder);
 
-        final String name = scenarioName + "-" + project.getName() + ".txt";
-        final Path actualResult = testFolder.resolve(name);
-        final Path expectedResult = expectedResultsFolder.resolve(name);
+        final var name = scenarioName + "-" + project.getName() + ".txt";
+        final var actualResult = testFolder.resolve(name);
+        final var expectedResult = expectedResultsFolder.resolve(name);
 
-        final HourlyReport report = new DefaultHourlyReportGenerator(project).createReport();
+        final var report = new DefaultHourlyReportGenerator(project).createReport();
 
-        try (final PrintWriter pw = new PrintWriter(actualResult.toFile()))
+        try (final var pw = new PrintWriter(Files.newBufferedWriter(actualResult)))
           {
             pw.print(report.asString());
           }
 
-        FileComparisonUtils.assertSameContents(expectedResult.toFile(), actualResult.toFile());
+        assertSameContents(expectedResult, actualResult);
       }
   }
