@@ -27,12 +27,9 @@
 package it.tidalwave.accounting.exporter.xml.impl;
 
 import javax.annotation.Nonnull;
-import java.io.FileInputStream;
-import java.io.InputStream;
 import java.io.PrintWriter;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import it.tidalwave.accounting.model.Accounting;
 import it.tidalwave.util.spi.AsDelegateProvider;
 import org.testng.annotations.BeforeMethod;
@@ -58,25 +55,26 @@ public class AccountingXmlUnmarshallableTest
     public void must_properly_unmarshall_iBiz()
       throws Exception
       {
-        final Path expectedResultsFolder = Paths.get("/Users/fritz/Business/Tidalwave/Projects/WorkAreas/blueHour/private");
+        final var
+                expectedResultsFolder = Path.of("/Users/fritz/Business/Tidalwave/Projects/WorkAreas/blueHour/private");
         
         if (Files.exists(expectedResultsFolder))
           {
-            final Path testFolder = Paths.get("target/test-results");
+            final var testFolder = Path.of("target/test-results");
             Files.createDirectories(testFolder);
-            final Path actualResult = testFolder.resolve("unmarshalledDump.txt");
-            final Path expectedResult = expectedResultsFolder.resolve("iBizImportDump.txt");
-            final Path importFile = expectedResultsFolder.resolve("iBizImportMarshalled.xml");
+            final var actualResult = testFolder.resolve("unmarshalledDump.txt");
+            final var expectedResult = expectedResultsFolder.resolve("iBizImportDump.txt");
+            final var importFile = expectedResultsFolder.resolve("iBizImportMarshalled.xml");
 
-            final Accounting accounting = Accounting.createNew();
-            final AccountingXmlUnmarshallable fixture = new AccountingXmlUnmarshallable(accounting);
+            final var accounting = Accounting.createNew();
+            final var fixture = new AccountingXmlUnmarshallable(accounting);
 
-            try (final InputStream is = new FileInputStream(importFile.toFile())) 
+            try (final var is = Files.newInputStream(importFile))
               {
                 fixture.unmarshal(is);
               }
 
-            try (final PrintWriter pw = new PrintWriter(actualResult.toFile())) 
+            try (final var pw = new PrintWriter(Files.newBufferedWriter(actualResult)))
               {
                 new Dumper(accounting, pw).dumpAll();
               }
@@ -89,22 +87,22 @@ public class AccountingXmlUnmarshallableTest
     public void must_properly_unmarshall (@Nonnull final String scenarioName)
       throws Exception
       {
-        final Path expectedResultsFolder = Paths.get("src/test/resources/expected-results");
-        final Path testFolder = Paths.get("target/test-results");
+        final var expectedResultsFolder = Path.of("src/test/resources/expected-results");
+        final var testFolder = Path.of("target/test-results");
         Files.createDirectories(testFolder);
-        final Path importFile = Paths.get("src/test/resources/scenarios").resolve(scenarioName + ".xml");
-        final Path actualResult = testFolder.resolve(scenarioName + ".txt");
-        final Path expectedResult = expectedResultsFolder.resolve(scenarioName + ".txt");
+        final var importFile = Path.of("src/test/resources/scenarios").resolve(scenarioName + ".xml");
+        final var actualResult = testFolder.resolve(scenarioName + ".txt");
+        final var expectedResult = expectedResultsFolder.resolve(scenarioName + ".txt");
 
-        final Accounting accounting = Accounting.createNew();
-        final AccountingXmlUnmarshallable fixture = new AccountingXmlUnmarshallable(accounting);
+        final var accounting = Accounting.createNew();
+        final var fixture = new AccountingXmlUnmarshallable(accounting);
 
-        try (final InputStream is = new FileInputStream(importFile.toFile())) 
+        try (final var is = Files.newInputStream(importFile))
           {
             fixture.unmarshal(is);
           }
         
-        try (final PrintWriter pw = new PrintWriter(actualResult.toFile())) 
+        try (final var pw = new PrintWriter(actualResult.toFile()))
           {
             new Dumper(accounting, pw).dumpAll();
           }
